Fix package.json typo.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "author": "Martin Carrera <mcarrera.92@gmail.com> (http://martincarrera.xyz/)",
   "contributors": [
-    "Christian Gill <gillchristiang@gmail.com> (https://gillchristian.xyz/)",
+    "Christian Gill <gillchristiang@gmail.com> (https://gillchristian.xyz/)"
   ],
   "license": "MIT",
   "dependencies": {
